# waves

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.py  docker-compose.yml
.github/workflows/: build.yml
ci/: win_runner.Dockerfile
conan/profiles/: dev-clang  dev-msvc  tool_requires
shaders/: shader.frag  shader.vert
src/: callback_interfaces.ixx  glfw.ixx  main.cpp  systems.ixx  utils.cpp  utils.ixx  vk.ixx  window.cpp  window.ixx
src/commands/: commands.ixx
src/systems/: input.ixx  pc_input.ixx  system.ixx
src/vk/: instance.cpp
